# kompiladilo

./: Cargo.toml  README.md
crates/ir-core/: Cargo.toml
crates/ir-core/src/: errors.rs  lib.rs
crates/languages/language-better-brainfuck/: Cargo.toml
crates/languages/language-better-brainfuck/src/: emitter.rs  lib.rs
crates/languages/language-brainfuck/: Cargo.toml
crates/languages/language-brainfuck/src/: emitter.rs  lib.rs  parser.rs  tests.rs
crates/languages/language-simp/: Cargo.toml  language.md
crates/languages/language-simp/src/: emitter.rs  lib.rs  parser.rs
crates/transforms/transform-bbf-bf/: Cargo.toml
crates/transforms/transform-bbf-bf/src/: lib.rs
crates/transforms/transform-better-brainfuck-opt/: Cargo.toml
crates/transforms/transform-better-brainfuck-opt/src/: lib.rs
crates/transforms/transform-bf-bbf/: Cargo.toml
crates/transforms/transform-bf-bbf/src/: lib.rs
crates/transforms/transform-simp-brainfuck/: Cargo.toml
crates/transforms/transform-simp-brainfuck/src/: lib.rs
driver/: Cargo.toml
driver/src/: main.rs
